# HyperRender

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: HyperRender.h  IAnimationTool.h  IDrawUnit.h  IEffectTool.h  IScreenTarget.h  IScreenTool.h  ISelectionTool.h  ITool.h  Render.h  RenderType.h  ToolFactory.h
include/Action/: IAction.h  IActionFactory.h
include/Effect/: IEffect.h  IEffectFactory.h  IShadowEffect.h
include/Effect/blur/: IDualKawaseBlur.h  IGaussianBlur.h
include/Effect/filter/: IEmbossFilter.h  IExposureFilter.h
include/Effect/warp/: ILiquifyEffect.h  ISwirlWarpEffect.h
shader/ScreenPass/: screen_pass.frag  screen_pass.vert
shader/StrokePass/: stroke_pass.comp
shader/effect/DualKawaseBlurDownSamplePass/: dual_kawase_blur_down_sample_pass.frag
shader/effect/DualKawaseBlurUpSamplePass/: dual_kawase_blur_up_sample_pass.frag  dual_kawase_blur_up_sample_pass.vert
shader/effect/EmbossFilterPass/: emboss_filter_pass.frag
shader/effect/ExposureFilterPass/: exposure_filter_pass.frag
shader/effect/GaussianBlurPass/: gaussian_blur_pass.comp  gaussian_blur_pass.frag
shader/effect/LiquifyPass/: liquify_image_pass.frag  liquify_image_pass.vert  liquify_main_pass.comp  liquify_main_pass.frag
shader/effect/RoundCornerPass/: round_corner_pass.frag  round_corner_pass.vert
shader/effect/ShadowEffectPass/: alpha_mask_pass.frag  shadow_effect_pass.frag
shader/effect/SwirlWarpEffect/: swirl_warp_effect.frag
shader/include/: ColorFunc.chunk  GlobalInfo.chunk
shader/include/blend/: BlendFunc.chunk  hsvFunc.chunk
shader/selection/SelectionNormalPass/: selection_normal_pass.frag
source/: CMakeLists.txt
source/include/: IDrawUnit.h  IEffectTool.h  ITool.h  Render.h  ToolFactory.h
source/src/common/: GpuHelper.h  common.h
source/src/pass/: BasePass.cpp  StrokePass.cpp
source/src/pass/effect/: DualKawaseBlurUpSamplePass.h  GaussianBlurPass.h
source/src/shader/gl/DualKawaseBlurDownSamplePass/: DUAL_KAWASE_BLUR_DOWN_SAMPLE_PASS_FRAG.h  DUAL_KAWASE_BLUR_DOWN_SAMPLE_PASS_VERT.h
source/src/shader/gl/DualKawaseBlurUpSamplePass/: DUAL_KAWASE_BLUR_UP_SAMPLE_PASS_FRAG.h  DUAL_KAWASE_BLUR_UP_SAMPLE_PASS_VERT.h
source/src/shader/gl/RoundCornerPass/: ROUND_CORNER_PASS_FRAG.h
source/src/shader/gl/ScreenPass/: SCREEN_PASS_VERT.h
source/src/shader/gles/DualKawaseBlurUpSamplePass/: DUAL_KAWASE_BLUR_UP_SAMPLE_PASS_VERT.h
source/src/shader/gles/ScreenPass/: SCREEN_PASS_FRAG.h
source/src/shader/vulkan/StrokePass/: STROKE_PASS_COMP.h
source/src/tool/: EffectTool.cpp  EffectTool.h  ToolFactory.cpp
src/common/: Camera.cpp  Camera.h  DrawUnit.cpp  DrawUnit.h  GpuHelper.cpp  GpuHelper.h  LogManager.cpp  LogManager.h  common.h
src/pass/: BasePass.cpp  BasePass.h  IPass.h  ScreenPass.cpp  ScreenPass.h  StrokePass.cpp  StrokePass.h
src/pass/effect/: DualKawaseBlurDownSamplePass.cpp  DualKawaseBlurDownSamplePass.h  DualKawaseBlurUpSamplePass.cpp  GaussianBlurPass.cpp  LiquifyImagePass.cpp  LiquifyImagePass.h  LiquifyMainPass.cpp  LiquifyMainPass.h  LiquifyPass.cpp  LiquifyPass.h  RoundCornerPass.cpp  RoundCornerPass.h
src/pass/selection/: SelectionNormalPass.cpp  SelectionNormalPass.h
src/tool/: BaseTool.cpp  BaseTool.h  EffectTool.cpp  EffectTool.h  ScreenTool.cpp  ScreenTool.h  SelectionTool.cpp  SelectionTool.h  ToolFactory.cpp
src/tool/Effect/: BaseEffect.h  EffectFactory.cpp  EffectFactory.h  ShadowEffect.cpp  ShadowEffect.h
tool/shader/: CMakeLists.txt  executor.bat  executor.sh
(+112 files in other folders)
