set(EXTERNAL ${CMAKE_CURRENT_SOURCE_DIR}/../external)
set(HYPER_GPU_PATH ${EXTERNAL}/HyperGpu)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

include_directories(${HYPER_GPU_PATH}/include ${EXTERNAL}/)
add_subdirectory(${EXTERNAL}/HyperGpu HyperGpu)

file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_library(${PROJECT_NAME} SHARED ${SOURCE})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} PUBLIC HyperGpu)
set_target_properties(${PROJECT_NAME} PROPERTIES
        XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED "YES"
        XCODE_ATTRIBUTE_CODE_SIGN_STYLE "Automatic"
        XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "Apple Development"
#        XCODE_ATTRIBUTE_DEVELOPMENT_TEAM ""
        XCODE_EMBED_FRAMEWORKS_CODE_SIGN_ON_COPY "YES"
)

if(CMAKE_SYSTEM_NAME STREQUAL "Windows" OR CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    add_definitions(-DOPENGL_DESKTOP)
else ()
    add_definitions(-DOPENGL_MOBILE)
endif ()